Regression: Blender Crash when unlinking a Collection from Blender File #103881

Closed
opened 2023-01-14 16:31:23 +01:00 by Steffen Dünner · 7 comments

System Information
Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.13

Blender Version
Broken: version: 3.2, 3.5
Worked: 3.1
Caused by ba49345705
Short description of error
When trying to "Unlink" a collection from the "Blender File" view in the Outliner, Blender instantly crashes / closes

Exact steps for others to reproduce the error

  • Either load the attached blend file:
    Crash_Unlink_v01.blend
    or open a new Blender, add a cube, add the cube to a new collection.
  • Go to the "Blender File" view in the Outliner
  • Right-click the new collection containing the cube and select "Unlink" (or if you use the attached Blend file try to unlink the "Unlink_Me" Collection)
  • Blender crashes

3.3.2 and 3.4.1 show the same behaviour. 2.93.13 just does nothing when clicking on the Unlink option.

**System Information** Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.13 **Blender Version** Broken: version: 3.2, 3.5 Worked: 3.1 Caused by ba49345705 **Short description of error** When trying to "Unlink" a collection from the "Blender File" view in the Outliner, Blender instantly crashes / closes **Exact steps for others to reproduce the error** - Either load the attached blend file: [Crash_Unlink_v01.blend](https://archive.blender.org/developer/F14149803/Crash_Unlink_v01.blend) or open a new Blender, add a cube, add the cube to a new collection. - Go to the "Blender File" view in the Outliner - Right-click the new collection containing the cube and select "Unlink" (or if you use the attached Blend file try to unlink the "Unlink_Me" Collection) - Blender crashes 3.3.2 and 3.4.1 show the same behaviour. 2.93.13 just does nothing when clicking on the Unlink option.

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from Blender Crash when unlinking a Collection from Blender File to Regression: Blender Crash when unlinking a Collection from Blender File 2023-01-16 05:04:52 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Crash caused by ba49345705
@JulianEisel ^

Crash caused by ba49345705 @JulianEisel ^
Pratik Borhade self-assigned this 2023-01-17 11:02:27 +01:00

This issue was referenced by a3c38667f0

This issue was referenced by a3c38667f0f8195ed560b32db5630ccaceb42d54
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103881
No description provided.